# dms

./: COPYING  README.md  configure.ac
src/: Makefile.am  dms-crud.c  dms-crud.h  dms.c  dms.conf.example  dms.h  readconf.c  readconf.h
